codepkg/objects/Group__c.object
<CustomObject>
    <fields>
        <fullName>NumberOfStudents__c</fullName>
        <label>NumberOfStudents</label>
        <summaryForeignKey>Student__c.Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pulpit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The pulpit, in which the group is related to.</description>
        <label>Pulpit</label>
        <referenceTo>Pulpit__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scholarship__c</fullName>
        <label>Scholarship</label>
        <summarizedField>Student__c.Scholarship__c</summarizedField>
        <summaryForeignKey>Student__c.Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SumCurrency__c</fullName>
        <label>SumCurrency</label>
        <summarizedField>Student__c.Currency_of_studing__c</summarizedField>
        <summaryForeignKey>Student__c.Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <label>University</label>
        <referenceTo>University__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MaxNumberOfStudents</fullName>
        <active>true</active>
        <errorConditionFormula>NumberOfStudents__c &gt; 25</errorConditionFormula>
        <errorMessage>There can&apos;t be more students than 25 in one group.</errorMessage>
    </validationRules>
</CustomObject>